HMX: Device tree: Updating HMX device tree patch
Changes:
- Disable sound-wm8904 support
- Whitespace fixes
- defconfig: AUTOFS4 name change

--- a/conf/machine/imx8mp-var-dart-hmx1.conf
+++ b/conf/machine/imx8mp-var-dart-hmx1.conf
@@ -5,7 +5,7 @@ require conf/machine/include/hmx-base.conf
 
 MACHINEOVERRIDES_EXTENDER:imx8mp-var-dart-hmx1 = "imx8mp-var-dart"
 
-MACHINE_FEATURES = "usbgadget usbhost vfat alsa pci bluetooth wifi rtc qemu-usermode quectel_modem"
+MACHINE_FEATURES = "usbgadget usbhost vfat pci bluetooth wifi rtc quectel_modem"
 
 MACHINE_FEATURES:append = " nxpiw612-sdio"
 
