--- a/conf/machine/imx8mp-var-dart-hmx1.conf
+++ b/conf/machine/imx8mp-var-dart-hmx1.conf
@@ -11,6 +11,6 @@ MACHINE_FEATURES:append = " nxpiw612-sdio"
 
 KERNEL_DEVICETREE = " \
 	freescale/imx8mp-var-dart-hmx1.dtb \
+	freescale/imx8mp-var-dart-1.x-hmx1.dtb \
 	freescale/imx8mp-var-dart-dt8mcustomboard.dtb \
 "
-
