conf: hmx-base: Remove meta-variscite-sdk-imx recipe of chromium

--- a/conf/machine/include/hmx-base.conf
+++ b/conf/machine/include/hmx-base.conf
@@ -8,6 +8,9 @@ BBMASK += "\
     meta-hostmobility-bsp/recipes-bsp/libubootenv \
     \
     meta-variscite-bsp-imx/recipes-multimedia/gstreamer \
+    \
+    meta-variscite-sdk-imx/recipes-browser/chromium \
+    \
 "
 
 PREFERRED_CONNECTIVITY_MANAGER_PACKAGES = ""
